--- a/example.in
+++ b/example.in
@@ -1,19 +1,21 @@
-RR
-QUANTUM 1000
-0 Llega A
-1 Llega B
-2 Llega C
-2001 Llega D
-3001 Acaba C
-3002 Llega E
-3003 Llega F
-5001 Llega G
-5500 Acaba D
-5501 startI/O E
-5800 Acaba F
-5900 endI/O E
-5901 Acaba A
-5902 Acaba B
-5903 Acaba G
-7000 Acaba E
-7001 endSimulacion
+prioNonPreemptive
+QUANTUM  0
+0 Llega 1 prio 1
+5 Llega 2 prio 2
+10 Llega 3 prio 2
+15 startI/O 1
+20 Llega 4 prio 4
+25 endI/O 1
+30 startI/O 2
+35 Llega 5 prio 5
+40 startI/O 1
+45 Llega 6 prio 6
+50 endI/O 1
+55 endI/O 2
+60 Acaba 2
+65 Acaba 3
+70 Acaba 1
+75 Acaba 4
+80 Acaba 5
+85 Acaba 6
+90 endSimulacion
